Final working version: Auth + AI streaming + summary fix

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY=AIzaSyCFyvC4_NHtSgjWfaUPDPWeaaDHqXDsoao
+MONGO_URL=mongodb://localhost:27017
+MONGO_URL=mongodb+srv://nallapatijayaveer_db_user:Jay12345@cluster0.cmnekxw.mongodb.net/?retryWrites=true&w=majority
